Added email utils and cache for otp